--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,7 +3,6 @@ on: push
 
 env:
   GODOT_VERSION: 3.3.4
-  EXPORT_NAME: jet-flame-vfx-demo
 
 jobs:
   export-web:
@@ -23,8 +22,7 @@ jobs:
       - name: Web Build
         run: |
           mkdir -v -p build/web
-          cd $EXPORT_NAME
-          godot -v --export "HTML5" ../build/web/index.html
+          godot -v --export "HTML5" build/web/index.html
       - name: Upload Artifact
         uses: actions/upload-artifact@v1
         with:
